adding new feature

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <p>Hello every one , this is LocalRepository to check the working of the github</p>
+    <p>Sanjeev kumar panjiyar </p>
 </body>
 </html>
